# pytorch-model-data-science

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: formatter.yml
notebook/: classifier_fashionmnist_1D.ipynb  regressor_california_housing_1D.ipynb  tuning.ipynb
notebook/utils/: classification_pipe.ipynb  model_pipe.ipynb  utils.ipynb
pytorch_model_data_science/: model.py  train.py  tuning.ipynb  tuning.py  validation.py
tests/: test_pytorch_model_data_science.py
