[tool.poetry]
name = "pytorch-model-data-science"
version = "0.1.0"
description = ""
authors = ["Yankai Wang <yankai.wang@momox.biz>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
