[tool.poetry]
name = "pytorch-model-data-science"
version = "0.1.0"
description = ""
authors = ["Yankai Wang <yankai.wang@momox.biz>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.1.1"
torch = "^1.13.1"
ray = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.1.0"}
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
