[tool.poetry]
name = "pytorch-model-data-science"
version = "0.2.2"
description = ""
authors = ["YankaiW <wyk.uestc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.1.1"
notebook = "^7.1.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.9.2"}
setuptools = "^69.1.0"
ipywidgets = "^8.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.1.0"}
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
